# SkyPro_beta_OOP_course

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: api.py  json_save.py  utils.py  vacancy.py
tests/: test_api.py  test_json.json  test_json_save.py  test_vacancy.py
